@@ -336,6 +336,8 @@ NamedPipeSocketFactory.4=Named pipe path can not be null or empty
 
 NativeCapabilites.001=Unsupported protocol version: {0}. Likely connecting to an X Protocol port.
 
+NativeSession.ThreadNameComment=Java thread: {0}
+
 NonRegisteringDriver.3=Hostname of MySQL Server
 NonRegisteringDriver.7=Port number of MySQL Server
 NonRegisteringDriver.10=Database name;
